--- a/todo.txt
+++ b/todo.txt
@@ -1,19 +1,23 @@
 There should be another search button beside the company search input field
 
+test the filtering of loaded companies according to their industries on the homepage
+
+All images should be referenced and must have fallbacks especially on the companies side. There should be no broken image links
+
+Login and sign up on the homepage header nav should be changed to "I'm a student" and "I'm a company" respectively.
+
+The applications/coins counting along with the upgrade button should be hidden from the deployed version until they're all ready
+
+Remove features that're not working or not ready from production
+
 The document preview in the application form should show the file name according to its design and should be replicated across all file upload inputs
 
 Company's avatar image is still not circular
 
-All images should have fallbacks especially on the companies side. There should be no broken image links
-
-The applications/coins counting along with the upgrade button should be hidden from the deployed version until they're all ready
-
-The shadow should be removed from homepage header
-
-Login and sign up on the homepage should be changed I'm a student and I'm a company respectively.
-
-Resolve the www and non www of intrns.com
-
 On the homepage, update the carousel images to higher quality and adequeately increase the width per image so that only one shows per cycle and the neighbouring images don't bulge out from the sides
+
+The shadow on the homepage header should be removed
+
+The wire-like squigly lines img on the UI design should be added and positioned on the hero section too
 
 The companies' interview time selection area is not matching the UI design yet
