build: trigger redeployment

--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,5 @@ All images should be referenced and must have fallbacks especially on the compan
 The document preview in the application form should show the file name according to its design and should be replicated across all file upload inputs
 
 The wire-like squigly lines img on the UI design should be added and positioned on the hero section too
+
+trigger redeployment
